@startuml Cine
!theme plain

class Pelicula {
    - titulo: String
    - duracion: int
    - rating: String
    - genero: String
    - idioma: String
    - subtitulos: String
    - peliculas: List<Pelicula>
}


class Sala {
    - numero: int
    - cantButacas: int
    - salas: List<Sala>
}

class Funcion {
    - pelicula: Pelicula
    - sala: Sala
    - horario: Date
    - precioUnitario: double
    - butacas: List<boolean>
    - funciones: List<Funcion>
}

class Cliente {
    - id: int
    - nombre: String
    - email: String
    - telefono: String
    - fechaRegistro: Date
    - clientes: List<Cliente>
}

class Reserva {
    - id: int
    - cliente: Cliente
    - funcion: Funcion
    - cantidadEntradas: int
    - fechaReserva: Date
    - estado: String
    - precioTotal: double
    - butacasReservadas: List<int>
    - reservas: List<Reserva>
}

class Factura {
    - id: int
    - cliente: Cliente
    - fechaEmision: Date
    - subtotal: double
    - impuestos: double
    - total: double
    - estado: String
    - facturas: List<Factura>
}



' Relaciones originales
Funcion ||--|| Pelicula : "proyecta"
Funcion ||--|| Sala : "se realiza en"

' Relaciones nuevas
Sala ||--o{ Funcion : "alberga"
Cliente ||--o{ Reserva : "realiza"
Reserva }o--|| Funcion : "es para"
Reserva ||--|| Factura : "genera"

@enduml
